package tests

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"google.golang.org/grpc"
	pb "tradingbot/proto"
)

func TestTradeExecution(t *testing.T) {
	// 连接gRPC服务器
	conn, err := grpc.Dial("localhost:50051", grpc.WithInsecure())
	if err != nil {
		t.Fatalf("Failed to connect: %v", err)
	}
	defer conn.Close()

	client := pb.NewTradeServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()

	// 测试获取市场数据
	t.Run("GetMarketData", func(t *testing.T) {
		req := &pb.MarketDataRequest{
			Symbol:    "SOL/USDC",
			Timeframe: "1m",
			Limit:     100,
		}
		resp, err := client.GetMarketData(ctx, req)
		assert.NoError(t, err)
		assert.NotNil(t, resp)
		assert.Greater(t, len(resp.Candles), 0)
	})

	// 测试执行交易
	t.Run("ExecuteTrade", func(t *testing.T) {
		req := &pb.TradeRequest{
			Symbol:     "SOL/USDC",
			Side:       "buy",
			Amount:     1.0,
			Price:      100.0,
			OrderType:  "market",
			Slippage:   1.0,
		}
		resp, err := client.ExecuteTrade(ctx, req)
		assert.NoError(t, err)
		assert.NotNil(t, resp)
		assert.NotEmpty(t, resp.OrderId)
	})

	// 测试获取订单状态
	t.Run("GetOrderStatus", func(t *testing.T) {
		req := &pb.OrderStatusRequest{
			OrderId: "test-order-id",
		}
		resp, err := client.GetOrderStatus(ctx, req)
		assert.NoError(t, err)
		assert.NotNil(t, resp)
		assert.NotEmpty(t, resp.Status)
	})

	// 测试价格订阅
	t.Run("SubscribePriceUpdates", func(t *testing.T) {
		req := &pb.PriceSubscriptionRequest{
			Symbols:          []string{"SOL/USDC"},
			UpdateIntervalMs: 1000,
		}
		stream, err := client.SubscribePriceUpdates(ctx, req)
		assert.NoError(t, err)

		// 接收第一个价格更新
		update, err := stream.Recv()
		assert.NoError(t, err)
		assert.NotNil(t, update)
		assert.Equal(t, "SOL/USDC", update.Symbol)
	})
}

func TestRiskManagement(t *testing.T) {
	// 测试风险限制
	t.Run("RiskLimit", func(t *testing.T) {
		// TODO: 实现风险管理测试
	})

	// 测试交易速率限制
	t.Run("RateLimit", func(t *testing.T) {
		// TODO: 实现速率限制测试
	})
}

func TestErrorHandling(t *testing.T) {
	// 测试无效参数
	t.Run("InvalidParameters", func(t *testing.T) {
		// TODO: 实现错误处理测试
	})

	// 测试网络错误
	t.Run("NetworkError", func(t *testing.T) {
		// TODO: 实现网络错误测试
	})
}
